# Code-Intelligence

./: .dockerignore  .gitattributes  .gitignore  .mcp.json  AGENTS.md  Cargo.toml  Containerfile  LICENSE  README.md  architecture-design.md  code-intelligence-mcp-v2_7_2-fixed.md  compose.yaml  llms.txt  server.json  thresholds.toml
.agents/: hooks.json
.agents/hooks/: calm-guard-probe.sh  calm-guard.sh
.calm-bin/x86_64-unknown-linux-musl/: calm
.ci-bin/x86_64-unknown-linux-musl/: ci
.claude/: settings.json
.claude-plugin/: marketplace.json
.claude/hooks/: calm-nudge.sh  ci-mcp-entrypoint.sh  ci-nudge.sh  posttooluse-discovery-dump.sh  session-start-build-calm.sh  session-start-build-ci.sh  sessionstart-discovery-dump.sh  test-calm-nudge.sh
.cursor/: install.sh  mcp.json
.github/workflows/: ci.yml  macos-x64-build-experiment.yml  prebuild-mcp-binary.yml  publish-mcp-registry.yml  release.yml  scip-nightly.yml  windows-build-experiment.yml
benchmarks/: README.md
benchmarks/b10_real_competitor_ab/: README.md  run_benchmark.py
benchmarks/b3_search_quality/: README.md  queries.yaml  run_benchmark.py
benchmarks/lib/: competitor_tasks.yaml  generic_mcp_client.py  naive_workflow.py
benchmarks/resolution/: README.md  run_benchmark.py
codeindex/: analyzer.py  codeowners.py  db_init.py  hotspot.py  path_algo.py  schemas.py  server.py
codeindex/resolver/: __init__.py
crates/calm-cli/: Cargo.toml
crates/calm-cli/src/: main.rs
crates/calm-cli/tests/: daemon_integration.rs  hooks_doctor_fix.rs  scip_overlay_cli.rs
crates/calm-core/: Cargo.toml  build.rs
crates/calm-core/src/: config.rs  db.rs  edit.rs  embedding.rs  fitness.rs  graph.rs  hooks.rs  hooks_check.rs  lib.rs  memory.rs  sanitize.rs  search.rs  walk.rs  workflow.rs
crates/calm-core/src/analysis/: boundaries.rs  config_drift.rs  coverage.rs  diff_impact.rs  doc_refs.rs  hotspot.rs
crates/calm-core/src/db/: conn.rs  edit_lock.rs  instance_lock.rs  schema.rs
crates/calm-core/src/graph/: boundary.rs  hub.rs
crates/calm-core/src/indexer/: crate_map.rs  csharp_namespace.rs  edges.rs  imports.rs  lang_constants.rs  mod.rs  parser.rs  pipeline.rs  psr4.rs  sql.rs
crates/calm-core/src/lsp/: client.rs  mod.rs  overlay.rs  provider.rs
crates/calm-core/src/resolver/: formal.rs
crates/calm-core/src/scip/: cache.rs  mod.rs  parse.rs  provider.rs  runner.rs
crates/calm-core/tests/: golden_graph_equivalence.rs  lang_feature_parity.rs
crates/calm-core/tests/fixtures/multi_lang_workspace/: README.md
crates/calm-core/tests/fixtures/multi_lang_workspace/java/: pom.xml
crates/calm-core/tests/fixtures/multi_lang_workspace/js/: main.js
crates/calm-core/tests/fixtures/multi_lang_workspace/kotlin/: build.gradle.kts
crates/calm-core/tests/fixtures/multi_lang_workspace/kotlin/src/main/kotlin/com/example/: Greeter.kt  Handlers.kt  Main.kt
crates/calm-core/tests/fixtures/multi_lang_workspace/php/: composer.json  index.php
crates/calm-core/tests/fixtures/multi_lang_workspace/python/: main.py
crates/calm-core/tests/fixtures/multi_lang_workspace/python/pkg/: helper.py
crates/calm-core/tests/fixtures/multi_lang_workspace/ruby/: handlers.rb
crates/calm-server/: Cargo.toml
crates/calm-server/src/: daemon.rs  lib.rs  scip_overlay.rs  sync_ext.rs  tools.rs  watcher.rs
crates/calm-server/src/__toolsnaps__/: callers.snap  edit_context.snap  edit_lines.snap  indexing_status.snap  repo_overview.snap  symbols_batch.snap  understand.snap
crates/calm-server/src/tools/: common.rs  edit.rs  guardrails.rs  inspect.rs  locate.rs  lsp.rs  memory.rs  orient.rs  patterndebt.rs  recover.rs  scip.rs  security.rs  testgap.rs  trace.rs
crates/calm-server/tests/: watcher_integration.rs
crates/ci-cli/: Cargo.toml
crates/ci-cli/src/: main.rs
crates/ci-core/: Cargo.toml  build.rs
crates/ci-core/assets/potion-code-16m/: config.json  model.safetensors  tokenizer.json
crates/ci-core/src/: analysis.rs  config.rs  db.rs  embedding.rs  fitness.rs  gitignore.rs  graph.rs  lib.rs  memory.rs  sanitize.rs  search.rs  types.rs  walk.rs
crates/ci-core/src/analysis/: boundaries.rs  cochange.rs  codeowners.rs  config_drift.rs  coverage.rs  dead_code.rs  diff_impact.rs  doc_refs.rs  git_log.rs  hotspot.rs  mod.rs
crates/ci-core/src/db/: conn.rs  instance_lock.rs  queries.rs  schema.rs
crates/ci-core/src/graph/: coreness.rs  hub.rs  path.rs  tokenize.rs
crates/ci-core/src/indexer/: chunker.rs  edges.rs  imports.rs  lang_constants.rs  mod.rs  parser.rs  pipeline.rs
crates/ci-core/src/resolver/: conservative.rs  formal.rs  lang_constants.rs  mod.rs
crates/ci-core/src/scip/: cache.rs  ingest.rs  mod.rs  parse.rs  runner.rs
crates/ci-core/tests/: parity_test.rs  rust_indexing.rs
crates/ci-core/tests/fixtures/rust_workspace/core/src/: lib.rs  util.rs
crates/ci-core/tests/fixtures/rust_workspace/core/src/util/: alpha.rs  beta.rs
crates/ci-core/tests/fixtures/synthetic_project/: expected_codeowners.json  expected_coreness.json  expected_coverage.json  expected_path.json
crates/ci-core/tests/fixtures/synthetic_project/.github/: CODEOWNERS
crates/ci-server/: Cargo.toml
crates/ci-server/src/: lib.rs  tools.rs  watcher.rs
crates/ci-server/src/tools/: common.rs  edit.rs  guardrails.rs  inspect.rs  locate.rs  memory.rs  orient.rs  recover.rs  trace.rs
crates/ci-server/tests/: watcher_integration.rs
docs/: architecture-design.md  architecture.md  cloud-environment-setup.md  comparison.md  mcp-client-setup.md  migration-plan-v2.md  migration-plan-v3.md  pattern-debt-registry.yaml  rename-checklist.md  rust-support-research.md  session-handoff-phase-5-6.md  what-external-users-get.md
docs/adr/: 0001-stack-graphs-scope.md  0002-formal-resolver-stack-graphs.md  0003-retire-python-to-frozen-fixtures.md  0004-lsp-optional-confidence-upgrade.md  0005-daemon-forwarder-shared-process.md
legacy/: README.md  build_synthetic_db.py  generate_oracle.py
npm/: README.md  stage-release.sh
scripts/: calm-mcp-wrapper.sh  check-adr-staleness.sh  gen-coverage.sh  install.sh  mcp-launcher.sh
types/: mcp_types.ts
(+91 files in other folders)
