[workspace]
resolver = "2"
members = [
    "crates/ci-core",
    "crates/ci-server",
    "crates/ci-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
rust-version = "1.85"

[workspace.dependencies]
# Core
rusqlite = { version = "0.34", features = ["bundled", "vtab"] }
tree-sitter = "0.24"
tree-sitter-python = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-java = "0.23"
tree-sitter-rust = "0.23"
tree-sitter-go = "0.23"
# Tier-0.5 optional language grammars (accurate AST extraction, opt-in via feature flags).
# Only crates whose tree-sitter version is compatible with "0.24" are included;
# kotlin (0.3.x) and swift (0.7.x) use incompatible older tree-sitter API versions
# and fall back to regex extraction regardless of feature flag.
# Note: optionality is declared in each crate's Cargo.toml, not here.
tree-sitter-c = "0.24"
tree-sitter-cpp = "0.23"
tree-sitter-ruby = "0.23"
tree-sitter-php = "0.24"
tree-sitter-c-sharp = "0.23"
tree-sitter-bash = "0.25"
# Stack Graphs (formal name resolution)
stack-graphs = "0.14"
tree-sitter-stack-graphs = "0.10"
tree-sitter-stack-graphs-python = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
regex = "1"
thiserror = "2"
anyhow = "1"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
notify = "6.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rmcp = { version = "0.1", features = ["server", "transport-io", "macros"] }
schemars = "0.8"
clap = { version = "4", features = ["derive"] }
rayon = "1"

# Internal
ci-core = { path = "crates/ci-core" }
ci-server = { path = "crates/ci-server" }

[profile.release]
lto = true
codegen-units = 1
strip = true
