[workspace]
resolver = "2"
members = [
    "crates/calm-core",
    "crates/calm-server",
    "crates/calm-cli",
]

[workspace.package]
version = "0.1.1"
edition = "2024"
license = "MIT"
rust-version = "1.85"

[workspace.dependencies]
# Core
rusqlite = { version = "0.34", features = ["bundled", "vtab"] }
tree-sitter = "0.24"
tree-sitter-python = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-java = "0.23"
tree-sitter-rust = "0.23"
tree-sitter-go = "0.23"
# Tier-0.5 optional language grammars (accurate AST extraction, opt-in via feature flags).
# kotlin (0.3.x) and swift (0.7.x) use incompatible older tree-sitter API versions
# and fall back to regex extraction regardless of feature flag.
# Note: optionality is declared in each crate's Cargo.toml, not here.
#
# Pinned to an EXACT version (`=x.y.z`), not a caret range, for all six: a
# tree-sitter grammar crate's internal "language version" (ABI) can jump
# even between patch releases within the same caret-compatible range (this
# workspace's `tree-sitter` core is 0.24.7, supporting ABI 13-14) —
# tree-sitter-c-sharp 0.23.1 is ABI-compatible but 0.23.5 (still "^0.23") is
# already ABI 15 and fails `set_language` at runtime. That failure is
# swallowed silently by `parse_tree()`'s `.ok()?`, so a plain `cargo update`
# picking a newer compatible-looking patch can silently regress an entire
# language back to the much weaker Tier-0.5 shallow line-scan fallback (see
# indexer/parser.rs's `test_tier0_5_grammar_loads_*` tests, which catch this
# — do not loosen these pins without confirming those tests still pass).
tree-sitter-c = "=0.23.4"
tree-sitter-cpp = "=0.23.4"
tree-sitter-ruby = "=0.23.1"
tree-sitter-php = "=0.23.11"
tree-sitter-c-sharp = "=0.23.1"
tree-sitter-bash = "=0.23.3"
# Stack Graphs (formal name resolution)
stack-graphs = "0.14"
tree-sitter-stack-graphs = "0.10"
tree-sitter-stack-graphs-python = "0.3"
# =0.23.2 pin (tree-sitter-typescript) comes from this crate's own Cargo.toml —
# already the exact version tree-sitter-typescript resolves to workspace-wide.
tree-sitter-stack-graphs-typescript = "0.4"
tree-sitter-stack-graphs-java = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
regex = "1"
ignore = "0.4"
globset = "0.4"
thiserror = "2"
anyhow = "1"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
notify = "6.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rmcp = { version = "0.1", features = ["server", "transport-io", "macros"] }
schemars = "0.8"
clap = { version = "4", features = ["derive"] }
rayon = "1"

# Internal
calm-core = { path = "crates/calm-core" }
calm-server = { path = "crates/calm-server" }

[profile.release]
lto = true
codegen-units = 1
strip = true
