[package]
name = "calm-core"
version.workspace = true
edition.workspace = true

[dependencies]
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
regex = { workspace = true }
ignore = { workspace = true }
globset = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
rayon = { workspace = true }
fs4 = "0.9"
tree-sitter = { workspace = true }
tree-sitter-python = { workspace = true }
tree-sitter-typescript = { workspace = true }
tree-sitter-javascript = { workspace = true }
tree-sitter-java = { workspace = true }
tree-sitter-rust = { workspace = true }
tree-sitter-go = { workspace = true }
stack-graphs = { workspace = true }
tree-sitter-stack-graphs = { workspace = true }
tree-sitter-stack-graphs-python = { workspace = true }
tree-sitter-stack-graphs-typescript = { workspace = true }
tree-sitter-stack-graphs-java = { workspace = true }
tree-sitter-stack-graphs-javascript = { workspace = true }
model2vec-rs = { version = "0.2.1", optional = true }
tree-sitter-c       = { workspace = true, optional = true }
tree-sitter-cpp     = { workspace = true, optional = true }
tree-sitter-ruby    = { workspace = true, optional = true }
tree-sitter-php     = { workspace = true, optional = true }
tree-sitter-c-sharp = { workspace = true, optional = true }
tree-sitter-bash    = { workspace = true, optional = true }
tree-sitter-r       = { workspace = true, optional = true }
scip = { version = "0.9", optional = true }
protobuf = { version = "=3.7.2", optional = true }
tempfile = { version = "3", optional = true }

[dev-dependencies]
tempfile = "3"

[features]
# Semantic embeddings: pure-Rust static code embeddings (model2vec-rs).
# Nearest-neighbour search is a data-parallel brute-force cosine scan
# (embedding.rs::knn) over plain SQLite BLOB storage — no vector-search C
# extension (previously sqlite-vec, which failed to compile on musl libc),
# so this is on by default for every target, release or native. The default
# model's weights are vendored into the binary via `include_bytes!` (see
# `embedding::DEFAULT_MODEL_ID` and `assets/potion-code-16m/`, tracked with
# Git LFS) — loading it needs no network. A custom `semantic_search.model`
# still resolves through model2vec-rs's `hf-hub` fallback (local path or
# HuggingFace Hub download).
default = ["embeddings", "tier0-5", "scip-overlay"]
embeddings = ["dep:model2vec-rs"]
# Tier-0.5 upgrade: optional per-language tree-sitter grammars for accurate
# AST-based extraction (replaces regex fallback when compiled in).
# Individual flags let users include only the languages they need.
lang-c      = ["dep:tree-sitter-c"]
lang-cpp    = ["dep:tree-sitter-cpp"]
lang-ruby   = ["dep:tree-sitter-ruby"]
lang-php    = ["dep:tree-sitter-php"]
lang-csharp = ["dep:tree-sitter-c-sharp"]
lang-shell  = ["dep:tree-sitter-bash"]
lang-r      = ["dep:tree-sitter-r"]
# kotlin and swift use incompatible tree-sitter versions — regex fallback always active.
# lang-kotlin and lang-swift are no-op stubs kept for API stability.
lang-kotlin = []
lang-swift  = []
# Bundle: all seven tree-sitter-upgraded Tier-0.5 languages at once.
tier0-5 = ["lang-c", "lang-cpp", "lang-ruby", "lang-php", "lang-csharp", "lang-shell", "lang-r"]
# SCIP overlay (rust-analyzer batch `scip`) upgrades existing Rust call edges
# to `Formal` confidence. Originally shipped off-by-default (Invariant 3 in
# docs/superskills/plans/2026-07-03-rust-support.md) pending a stability
# check; promoted to default 2026-07-05 after confirming: `scip`'s only dep
# is `protobuf` (pure Rust, no C/-sys crates — no musl/cross-compile risk,
# unlike the old sqlite-vec case); `run_scip` has a hard 120s timeout with
# kill-and-degrade-to-syntactic-graph on overrun (measured 21.5s on this
# very workspace, ~44k occurrences — see runner.rs); `run_overlay` caches on
# (rust-analyzer version, Cargo.lock hash, dirty files) so it doesn't re-run
# on every reindex; it runs on a background thread so it never blocks tool
# serving; and `ScipConfig` auto-detects rust-analyzer on PATH/rustup/VS
# Code, silently no-op'ing (zero behavior change) on a machine without it.
scip-overlay = ["dep:scip", "dep:protobuf", "dep:tempfile"]
