[package]
name = "calm-core"
version.workspace = true
edition.workspace = true

[dependencies]
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
regex = { workspace = true }
sqlparser = { workspace = true }
ignore = { workspace = true }
globset = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
rayon = { workspace = true }
fs4 = "0.9"
tree-sitter = { workspace = true }
tree-sitter-python = { workspace = true }
tree-sitter-typescript = { workspace = true }
tree-sitter-javascript = { workspace = true }
tree-sitter-java = { workspace = true }
tree-sitter-rust = { workspace = true }
tree-sitter-go = { workspace = true }
stack-graphs = { workspace = true }
tree-sitter-stack-graphs = { workspace = true }
tree-sitter-stack-graphs-python = { workspace = true }
tree-sitter-stack-graphs-typescript = { workspace = true }
tree-sitter-stack-graphs-java = { workspace = true }
tree-sitter-stack-graphs-javascript = { workspace = true }
model2vec-rs = { version = "0.2.1", optional = true }
tree-sitter-c       = { workspace = true, optional = true }
tree-sitter-cpp     = { workspace = true, optional = true }
tree-sitter-ruby    = { workspace = true, optional = true }
tree-sitter-php     = { workspace = true, optional = true }
tree-sitter-c-sharp = { workspace = true, optional = true }
tree-sitter-bash    = { workspace = true, optional = true }
tree-sitter-r       = { workspace = true, optional = true }
tree-sitter-kotlin-ng = { workspace = true, optional = true }
tree-sitter-swift    = { workspace = true, optional = true }
tree-sitter-scala    = { workspace = true, optional = true }
tree-sitter-dart     = { workspace = true, optional = true }
tree-sitter-lua      = { workspace = true, optional = true }
tree-sitter-elixir   = { workspace = true, optional = true }
tree-sitter-haskell  = { workspace = true, optional = true }
tree-sitter-ocaml    = { workspace = true, optional = true }
tree-sitter-zig      = { workspace = true, optional = true }
tree-sitter-powershell = { workspace = true, optional = true }
tree-sitter-groovy = { workspace = true, optional = true }
scip = { version = "0.9", optional = true }
protobuf = { version = "=3.7.2", optional = true }
tempfile = { version = "3", optional = true }
lsp-types = { version = "0.97", optional = true }
tokio = { workspace = true, optional = true }

[dev-dependencies]
tempfile = "3"

[features]
# Semantic embeddings: pure-Rust static code embeddings (model2vec-rs).
# Nearest-neighbour search is a data-parallel brute-force cosine scan
# (embedding.rs::knn) over plain SQLite BLOB storage — no vector-search C
# extension (previously sqlite-vec, which failed to compile on musl libc),
# so this is on by default for every target, release or native. The default
# model's weights are vendored into the binary via `include_bytes!` (see
# `embedding::DEFAULT_MODEL_ID` and `assets/potion-code-16m/`) — loading it
# needs no network at runtime. The weights file itself is fetched from
# HuggingFace Hub and checksum-verified by `build.rs::ensure_embedding_weights`
# at compile time instead of being git-tracked (used to be Git LFS, which
# exhausted the GitHub account's LFS bandwidth budget — see
# docs/superskills/specs/2026-07-12-edge-release-binary-distribution.md). A
# custom `semantic_search.model` still resolves through model2vec-rs's
# `hf-hub` fallback (local path or HuggingFace Hub download).
default = ["embeddings", "tier0-5", "scip-overlay"]
embeddings = ["dep:model2vec-rs"]
# Tier-0.5 upgrade: optional per-language tree-sitter grammars for accurate
# AST-based extraction (replaces regex fallback when compiled in).
# Individual flags let users include only the languages they need.
lang-c      = ["dep:tree-sitter-c"]
lang-cpp    = ["dep:tree-sitter-cpp"]
lang-ruby   = ["dep:tree-sitter-ruby"]
lang-php    = ["dep:tree-sitter-php"]
lang-csharp = ["dep:tree-sitter-c-sharp"]
lang-shell  = ["dep:tree-sitter-bash"]
lang-r      = ["dep:tree-sitter-r"]
# kotlin/swift (2026-07-10 plan): real tree-sitter grammars, not the old
# no-op stubs — see the workspace root Cargo.toml comment for why the prior
# "incompatible tree-sitter versions" framing was wrong (no dependency had
# ever been declared at all). Deliberately kept OUT of the `tier0-5` bundle
# for now: first release cycle with a real grammar for either language,
# opt-in only until proven stable, same caution as when tier0-5 itself was
# first introduced.
lang-kotlin = ["dep:tree-sitter-kotlin-ng"]
lang-swift  = ["dep:tree-sitter-swift"]
# Phase C (2026-07-11): same opt-in-only posture as kotlin/swift above — not
# bundled into tier0-5 yet.
lang-scala  = ["dep:tree-sitter-scala"]
lang-dart   = ["dep:tree-sitter-dart"]
lang-lua    = ["dep:tree-sitter-lua"]
lang-elixir = ["dep:tree-sitter-elixir"]
lang-haskell = ["dep:tree-sitter-haskell"]
lang-ocaml = ["dep:tree-sitter-ocaml"]
lang-zig = ["dep:tree-sitter-zig"]
lang-powershell = ["dep:tree-sitter-powershell"]
lang-groovy = ["dep:tree-sitter-groovy"]
# Bundle: all seven tree-sitter-upgraded Tier-0.5 languages at once.
tier0-5 = ["lang-c", "lang-cpp", "lang-ruby", "lang-php", "lang-csharp", "lang-shell", "lang-r"]
# SCIP overlay (rust-analyzer batch `scip`) upgrades existing Rust call edges
# to `Formal` confidence. Originally shipped off-by-default (Invariant 3 in
# docs/superskills/plans/2026-07-03-rust-support.md) pending a stability
# check; promoted to default 2026-07-05 after confirming: `scip`'s only dep
# is `protobuf` (pure Rust, no C/-sys crates — no musl/cross-compile risk,
# unlike the old sqlite-vec case); `run_scip` has a hard 120s timeout with
# kill-and-degrade-to-syntactic-graph on overrun (measured 21.5s on this
# very workspace, ~44k occurrences — see runner.rs); `run_overlay` caches on
# (rust-analyzer version, Cargo.lock hash, dirty files) so it doesn't re-run
# on every reindex; it runs on a background thread so it never blocks tool
# serving; and `ScipConfig` auto-detects rust-analyzer on PATH/rustup/VS
# Code, silently no-op'ing (zero behavior change) on a machine without it.
scip-overlay = ["dep:scip", "dep:protobuf", "dep:tempfile"]
# LSP resolve-time overlay (rust-analyzer `textDocument/definition` over
# stdio) — see `LspConfig`'s doc comment (config.rs) for the cost-shape
# reasoning behind its `OnDemand` default, and `lsp/overlay.rs` for why this
# is a separate pass from `scip-overlay` rather than folded into it. First
# `tokio::process` usage in this crate — every other subprocess spawn here
# (`scip/runner.rs`, etc.) is sync `std::process::Command`, unsuited to a
# persistent bidirectional LSP session. The async session runs on its own
# dedicated OS thread with its own single-threaded runtime (`lsp/overlay.rs`)
# — NOT an inline `block_on`, which panics when the caller already sits on
# the server's ambient tokio runtime (reproduced in the 2026-07-10 review).
# Depends on `scip-overlay` deliberately: reuses its rust-analyzer binary
# discovery (`scip/runner.rs::resolve_binary`) and location→symbol resolution
# (`scip/ingest.rs`) instead of duplicating them — `crate::scip` doesn't
# compile without that feature.
lsp-overlay = ["dep:lsp-types", "dep:tokio", "scip-overlay"]
