[package]
name = "ci-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "ci"
path = "src/main.rs"

[dependencies]
ci-core = { workspace = true }
ci-server = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
