[package]
name = "ci-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "ci"
path = "src/main.rs"

[dependencies]
ci-core = { workspace = true }
ci-server = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
rusqlite = { workspace = true }
serde_json = { workspace = true }

[features]
default = ["embeddings"]
embeddings = ["ci-core/embeddings", "ci-server/embeddings"]
