[package]
name = "ci-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "ci"
path = "src/main.rs"

[dependencies]
ci-core = { workspace = true }
ci-server = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
rusqlite = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = "3"

[features]
default = ["embeddings", "tier0-5", "scip-overlay"]
embeddings = ["ci-core/embeddings", "ci-server/embeddings"]
lang-c      = ["ci-core/lang-c",      "ci-server/lang-c"]
lang-cpp    = ["ci-core/lang-cpp",    "ci-server/lang-cpp"]
lang-ruby   = ["ci-core/lang-ruby",   "ci-server/lang-ruby"]
lang-kotlin = ["ci-core/lang-kotlin", "ci-server/lang-kotlin"]
lang-swift  = ["ci-core/lang-swift",  "ci-server/lang-swift"]
lang-php    = ["ci-core/lang-php",    "ci-server/lang-php"]
lang-shell  = ["ci-core/lang-shell",  "ci-server/lang-shell"]
tier0-5     = ["ci-core/tier0-5",     "ci-server/tier0-5"]
scip-overlay = ["ci-core/scip-overlay", "ci-server/scip-overlay"]
