[package]
name = "ci-core"
version.workspace = true
edition.workspace = true

[dependencies]
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
regex = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tree-sitter = { workspace = true }
tree-sitter-python = { workspace = true }
tree-sitter-typescript = { workspace = true }
tree-sitter-javascript = { workspace = true }
tree-sitter-java = { workspace = true }
tree-sitter-rust = { workspace = true }
tree-sitter-go = { workspace = true }
stack-graphs = { workspace = true }
tree-sitter-stack-graphs = { workspace = true }
tree-sitter-stack-graphs-python = { workspace = true }

[dev-dependencies]
tempfile = "3"
