[package]
name = "ci-core"
version.workspace = true
edition.workspace = true

[dependencies]
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
regex = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
rayon = { workspace = true }
tree-sitter = { workspace = true }
tree-sitter-python = { workspace = true }
tree-sitter-typescript = { workspace = true }
tree-sitter-javascript = { workspace = true }
tree-sitter-java = { workspace = true }
tree-sitter-rust = { workspace = true }
tree-sitter-go = { workspace = true }
stack-graphs = { workspace = true }
tree-sitter-stack-graphs = { workspace = true }
tree-sitter-stack-graphs-python = { workspace = true }
model2vec-rs = { version = "0.2.1", optional = true }
sqlite-vec = { version = "0.1.9", optional = true }

[dev-dependencies]
tempfile = "3"

[features]
# Semantic embeddings: pure-Rust static code embeddings (model2vec-rs) stored
# in sqlite-vec. On by default for native builds; musl release builds explicitly
# opt-out via --no-default-features to keep the static binary lean.
default = ["embeddings"]
embeddings = ["dep:model2vec-rs", "dep:sqlite-vec"]
