[package]
name = "ci-core"
version.workspace = true
edition.workspace = true

[dependencies]
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
regex = { workspace = true }
ignore = { workspace = true }
globset = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
rayon = { workspace = true }
tree-sitter = { workspace = true }
tree-sitter-python = { workspace = true }
tree-sitter-typescript = { workspace = true }
tree-sitter-javascript = { workspace = true }
tree-sitter-java = { workspace = true }
tree-sitter-rust = { workspace = true }
tree-sitter-go = { workspace = true }
stack-graphs = { workspace = true }
tree-sitter-stack-graphs = { workspace = true }
tree-sitter-stack-graphs-python = { workspace = true }
tree-sitter-stack-graphs-typescript = { workspace = true }
model2vec-rs = { version = "0.2.1", optional = true }
tree-sitter-c       = { workspace = true, optional = true }
tree-sitter-cpp     = { workspace = true, optional = true }
tree-sitter-ruby    = { workspace = true, optional = true }
tree-sitter-php     = { workspace = true, optional = true }
tree-sitter-c-sharp = { workspace = true, optional = true }
tree-sitter-bash    = { workspace = true, optional = true }

[dev-dependencies]
tempfile = "3"

[features]
# Semantic embeddings: pure-Rust static code embeddings (model2vec-rs).
# Nearest-neighbour search is a data-parallel brute-force cosine scan
# (embedding.rs::knn) over plain SQLite BLOB storage — no vector-search C
# extension (previously sqlite-vec, which failed to compile on musl libc),
# so this is on by default for every target, release or native. The default
# model's weights are vendored into the binary via `include_bytes!` (see
# `embedding::DEFAULT_MODEL_ID` and `assets/potion-code-16m/`, tracked with
# Git LFS) — loading it needs no network. A custom `semantic_search.model`
# still resolves through model2vec-rs's `hf-hub` fallback (local path or
# HuggingFace Hub download).
default = ["embeddings", "tier0-5"]
embeddings = ["dep:model2vec-rs"]
# Tier-0.5 upgrade: optional per-language tree-sitter grammars for accurate
# AST-based extraction (replaces regex fallback when compiled in).
# Individual flags let users include only the languages they need.
lang-c      = ["dep:tree-sitter-c"]
lang-cpp    = ["dep:tree-sitter-cpp"]
lang-ruby   = ["dep:tree-sitter-ruby"]
lang-php    = ["dep:tree-sitter-php"]
lang-csharp = ["dep:tree-sitter-c-sharp"]
lang-shell  = ["dep:tree-sitter-bash"]
# kotlin and swift use incompatible tree-sitter versions — regex fallback always active.
# lang-kotlin and lang-swift are no-op stubs kept for API stability.
lang-kotlin = []
lang-swift  = []
# Bundle: all six tree-sitter-upgraded Tier-0.5 languages at once.
tier0-5 = ["lang-c", "lang-cpp", "lang-ruby", "lang-php", "lang-csharp", "lang-shell"]
