[package]
name = "ci-server"
version.workspace = true
edition.workspace = true

[dependencies]
ci-core = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
notify = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
rmcp = { workspace = true }
schemars = { workspace = true }

[features]
default = ["embeddings"]
embeddings = ["ci-core/embeddings"]
