[package]
name = "ci-server"
version.workspace = true
edition.workspace = true

[dependencies]
ci-core = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
notify = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
rmcp = { workspace = true }
schemars = { workspace = true }

[features]
default = ["embeddings", "tier0-5", "scip-overlay"]
embeddings = ["ci-core/embeddings"]
lang-c      = ["ci-core/lang-c"]
lang-cpp    = ["ci-core/lang-cpp"]
lang-ruby   = ["ci-core/lang-ruby"]
lang-kotlin = ["ci-core/lang-kotlin"]
lang-swift  = ["ci-core/lang-swift"]
lang-php    = ["ci-core/lang-php"]
lang-csharp = ["ci-core/lang-csharp"]
lang-shell  = ["ci-core/lang-shell"]
tier0-5     = ["ci-core/tier0-5"]
scip-overlay = ["ci-core/scip-overlay"]
